# GrandfatherClock

./: .gitignore  CMakeLists.txt
From Claude Design/: Clock Showcase.html
Saved Web Pages/: bhi - clocks, watches & the art and science of timekeeping.html
Saved Web Pages/bhi - clocks, watches & the art and science of timekeeping_files/: emx_nav_left.css
docs/: audio-architecture.md  chime-sequences.md
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/sounds/: CloseEncountersOfTheThirdKind1.au  CloseEncountersOfTheThirdKind2.au  CloseEncountersOfTheThirdKind3.au  CloseEncountersOfTheThirdKind4.au  Cuckoo.au  Grandfather.au  Tower.au  Westminister1.au  Westminister2.au  Westminister3.au  Westminister4.au
package/contents/ui/: ChimeEngine.qml  ClockFace.qml  ConfigAppearance.qml  ConfigChimes.qml  ConfigGeneral.qml  FullRepresentation.qml  main.qml
